<resources>
    <string name="app_name">Intishaka</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="good_morning_mr_da">Good Morning Mr.Da</string>
    <string name="start">Start</string>
    <string name="meeting">Meeting</string>
    <string name="training">Training</string>
    <string name="visit">Visit</string>
    <string name="traveling">Traveling</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agreement">Agreement</string>
</resources>
